--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,24 +84,32 @@
             </div>
 
             <div class="content">
-                
-                <div class="content__event">
-                    <div class="content__event__one">
+                <div class="content__main">
+                    <div class="content__main__one">
                         <a href="/">
                             <img src="/images/car_best.png" />
                         </a>
                     </div>
 
-                    <div class="content__event__carousel">
+                    <div class="content__main__carousel">
                         <div class="slide">
-                            <div class="item--first">
+                            <div
+                                class="item"
+                                style="transform: translate3d(-100%, 0, 0); transition: transform 0.4s;"
+                            >
                                 <img src="/images/coffee_twig.png" />
                             </div>
-                            <div class="item--second">
-                                <img src="/images/coffee_twig.png" />
+                            <div
+                                class="item"
+                                style="transform: translate3d(0%, 0, 0); transition: transform 0.4s;"
+                            >
+                                <img src="/images/carousel_test1.jfif" />
                             </div>
-                            <div class="item--third">
-                                <img src="/images/coffee_twig.png" />
+                            <div
+                                class="item"
+                                style="transform: translate3d(100%, 0, 0); transition: transform 0.4s;"
+                            >
+                                <img src="/images/carousel_test2.png" />
                             </div>
                         </div>
 
