--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -2,20 +2,24 @@
 <html lang="en">
 
    <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>SHOWPPING_HOW</title>
-      <link rel="stylesheet" href="style.css" />
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
+      <profile="http: //www.w3.org/2005/10/profile">
+         <link rel="icon" type="image/png" href="http://example.com/myicon.png">
+
+
+         <meta charset="UTF-8">
+         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <title>SHOWPPING_HOW</title>
+         <link rel="stylesheet" href="style.css" />
+         <link rel="preconnect" href="https://fonts.gstatic.com">
+         <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
 
    </head>
 
 
    <body>
 
-      <header class="head">
+      <header class="header">
          <div class="area_headtop">
             <div class="banner">
                <a href="#" class="link">
@@ -105,7 +109,9 @@
             <div class="evt_main">
                <div class="banner_area">
                   <a href="#">
-                     <img src="//shop4.daumcdn.net/shophow/sib/0_210219174849_FwZShCdZPYIPpJmvgEiGWverDgJVqrrq"></img>
+                     <img src="">
+                     {{!-- fetch_img_insertArea --}}
+                     </img>
                   </a>
                </div>
                <div class="slide_area">
@@ -114,14 +120,16 @@
                         <span>이전</span>
                      </button>
                      <div class="slide">
-                        {{!-- fetch_img_insertArea --}}
+                        <div class="slide_second_position">
+                           {{!-- fetch_img_insertArea --}}
+                        </div>
+
                      </div>
                      <button class="next">
                         <span>다음</span>
                      </button>
                   </div>
                   <div class="slide_ctrl"></div>
-                  {{!-- {{{body}}} --}}
                </div>
             </div>
             <div class="evt_list">
@@ -175,67 +183,68 @@
                <button class="see_more_btn">더보기(1/279건) ⩒</button>
             </div>
          </div>
-      </section>
 
 
-      <section class="section_hot_deal wrap">
-         <h3>지금뜨는 테마 카테고리</h3>
-         <div class="hot_deal_list">
-            <button class="prev"></button>
-            <ul class="panel">
+         <div class="section_hot_deal wrap">
+            <h3>지금뜨는 테마 카테고리</h3>
+            <div class="hot_deal_list">
+               <button class="prev"></button>
+               <ul class="panel">
 
 
-               <li class="panel_list">
-                  <a href="#">
-                     <img
-                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
-                     <p>안정적인 그립감의 핸들커버</p>
-                     <span>스타일리시함까지 갖춘 차량 아이템</span>
-                     <span class="theme_icon">테마</span>
-                  </a>
-               </li>
-               <li class="panel_list">
-                  <a href="#">
-                     <img
-                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
-                     <p>안정적인 그립감의 핸들커버</p>
-                     <span>스타일리시함까지 갖춘 차량 아이템</span>
-                     <span class="theme_icon">테마</span>
-                  </a>
-               </li>
-               <li class="panel_list">
-                  <a href="#">
-                     <img
-                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
-                     <p>안정적인 그립감의 핸들커버</p>
-                     <span>스타일리시함까지 갖춘 차량 아이템</span>
-                     <span class="theme_icon">테마</span>
-                  </a>
-               </li>
-               <li class="panel_list">
-                  <a href="#">
-                     <img
-                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
-                     <p>안정적인 그립감의 핸들커버</p>
-                     <span>스타일리시함까지 갖춘 차량 아이템</span>
-                     <span class="theme_icon">테마</span>
-                  </a>
-               </li>
-               <li class="panel_list">
-                  <a href="#">
-                     <img
-                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
-                     <p>안정적인 그립감의 핸들커버</p>
-                     <span>스타일리시함까지 갖춘 차량 아이템</span>
-                     <span class="theme_icon">테마</span>
-                  </a>
-               </li>
+                  <li class="panel_list">
+                     <a href="#">
+                        <img
+                           src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                        <p>안정적인 그립감의 핸들커버</p>
+                        <span>스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="theme_icon">테마</span>
+                     </a>
+                  </li>
+                  <li class="panel_list">
+                     <a href="#">
+                        <img
+                           src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                        <p>안정적인 그립감의 핸들커버</p>
+                        <span>스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="theme_icon">테마</span>
+                     </a>
+                  </li>
+                  <li class="panel_list">
+                     <a href="#">
+                        <img
+                           src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                        <p>안정적인 그립감의 핸들커버</p>
+                        <span>스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="theme_icon">테마</span>
+                     </a>
+                  </li>
+                  <li class="panel_list">
+                     <a href="#">
+                        <img
+                           src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                        <p>안정적인 그립감의 핸들커버</p>
+                        <span>스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="theme_icon">테마</span>
+                     </a>
+                  </li>
+                  <li class="panel_list">
+                     <a href="#">
+                        <img
+                           src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP4212071675.jpg%3Fut%3D20171219151418&scode=talkgift"></img>
+                        <p>안정적인 그립감의 핸들커버</p>
+                        <span>스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="theme_icon">테마</span>
+                     </a>
+                  </li>
 
-            </ul>
-            <button class="next"></button>
+               </ul>
+               <button class="next"></button>
+            </div>
          </div>
          </div>
       </section>
+
       <script type="module" src="play.js"></script>
    </body>
 
