Add: paging 버튼 마우스엔터에 따라 배너 바뀌도록 기능 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,8 +76,6 @@
                     <img src="//shop4.daumcdn.net/shophow/sib/0_210219174849_FwZShCdZPYIPpJmvgEiGWverDgJVqrrq" alt="기획전 이벤트">
                 </a></div>
 
-
-
                 <div class="banner__slide">
                     <ul class="slide__wrap">
                         <li class="slide__list" data-index="0"><a href="#">
@@ -90,19 +88,17 @@
                             <img src="//shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj">
                         </a></li>
                     </ul>
-
-
-
+                    
                     <div class="slide__paging">
-                        <div class="">
+                        <div class="paging_wrap">
                             <span class="ico_paging">
-                                <span class="num_page"></span>
+                                <span class="num_page" data-index="0"></span>
                             </span>
                             <span class="ico_paging curr_page">
-                                <span class="num_page"></span>
+                                <span class="num_page" data-index="1"></span>
                             </span>
                             <span class="ico_paging">
-                                <span class="num_page"></span>
+                                <span class="num_page" data-index="2"></span>
                             </span>
                         </div>
                         <button type="button" class="slide__btn btn_prev">
