--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -1,53 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>쇼핑하우 클론</title>
-    <link rel = "stylesheet" href="/stylesheets/main.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
+
 <body>
 
-    <section class = "header">
-        <div class = "head_top">
-             <a class = "main_icon"></a>
-             <div class = "search_box">
-                 <input class = "search">
-                 <button class = "search_btn">
-                     <span class = "icon_search"></span>
-                 </button>
-             </div>
+    <section class="header">
+        <div class="head_top">
+            <a class="main_icon"></a>
+            <div class="search_box">
+                <input class="search">
+                <button class="search_btn">
+                    <span class="icon_search"></span>
+                </button>
+            </div>
         </div>
-        <div class = "nav">
-            <div class = nav_wrapper>
-                <div class = "category">
+        <div class="nav">
+            <div class=nav_wrapper>
+                <div class="category">
                     <button>
-                        <span class = "icon_hamburger"></span>
+                        <span class="icon_hamburger"></span>
                         카테고리
                     </button>
                 </div>
-                <ul class = "nav_menu">
-                    <li><a class = "menu_link">핫딜</a></li>
-                    <li><a class = "menu_link">베스트100</a></li>
-                    <li><a class = "menu_link">할인특가</a></li>
-                    <li><a class = "menu_link">기획전</a></li>
+                <ul class="nav_menu">
+                    <li><a class="menu_link">핫딜</a></li>
+                    <li><a class="menu_link">베스트100</a></li>
+                    <li><a class="menu_link">할인특가</a></li>
+                    <li><a class="menu_link">기획전</a></li>
                 </ul>
-                <ul class = "nav_hashtag">
-                    <li><a class = "hash_link">#건강식품</a></li>
-                    <li><a class = "hash_link">#제철음식</a></li>
-                    <li><a class = "hash_link">#블루투스이어폰</a></li>
-                    <li><a class = "hash_link">#커블체어</a></li>
-                    <li><a class = "hash_link">#노트북</a></li>
+                <ul class="nav_hashtag">
+                    <li><a class="hash_link">#건강식품</a></li>
+                    <li><a class="hash_link">#제철음식</a></li>
+                    <li><a class="hash_link">#블루투스이어폰</a></li>
+                    <li><a class="hash_link">#커블체어</a></li>
+                    <li><a class="hash_link">#노트북</a></li>
                 </ul>
-    
-                <ul class = "nav_user">
+
+                <ul class="nav_user">
                     <li>
                         <a>
-                            <span class = "icon_human"></span>
+                            <span class="icon_human"></span>
                             로그인
                         </a>
                     </li>
                     <li>
                         <a>
-                            <span class = "icon_layers"></span>
+                            <span class="icon_layers"></span>
                             최근본 상품
                         </a>
                     </li>
@@ -56,33 +58,39 @@
         </div>
     </section>
 
-    <section class = "main">
-        <table class = "main_table">
-            <tr>
-                <td class= "best_suggest"><img src = "/images/main_01.png"></td>
-                <td class = "event_slide">
-                    <div class = "left_button"></div>
-                    <div class = "slide_images">
-                        <img src = "/images/sub_01.png">
-                        <div class = "slide_paging"></div>
-                    </div>
-                    <div class = "rightt_button"></div>
-                </td>
-            </tr>
-            <tr>   
-                <!--item 들어갈 행-->
-            </tr>
-            <tr>
-                <td><button class = "show_more"></button></td>
-            </tr>
-        </table>
-        지금뜨는 테마 카테고리
-        <table class = "sub_table">
-            <tr>
-                <!--item 들어갈 행-->
-            </tr>
-        </table>
+    <section class="main">
+
+      <div class = "main_wrapper">
+        <div class = "big_contents">
+            <div class = "best">
+
+            </div>
+            <div class = "slide_content">
+                
+            </div>
+        </div>
+
+        <div class = "small_contents">
+            <ul class = "item_list">
+
+            </ul>
+            <button class = "show_more"></button>
+        </div>
+
+
+        <div class = "trend_category">
+            <button id = "prev_category"></button>
+            <h2>지금뜨는 테마 카테고리</h2>
+            <ul class = "category_list">
+
+            </ul>
+            <button id = "next_category"></button>
+        </div>
+
+      </div>
     </section>
-    <script src = "/javascripts/mainJavaScript.js"></script>
+    <script src="/javascripts/header.js"></script>
+    <script src="/javascripts/best.js"></script>
 </body>
+
 </html>
