--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -32,7 +32,7 @@
   }
 
   button {
-    @extend .button;
+    @include button(none, #fff);
     margin: 3px 3px;
 
     img {
@@ -43,6 +43,7 @@
 
 .header__categori {
   @extend .item-display;
+  justify-content: center;
   border-top: $header-border;
   margin-top: 40px;
   height: 54px;
@@ -50,7 +51,6 @@
 
 .wrap-categori {
   @extend .item-display;
-  margin: 0px 70px;
 
   ul {
     @extend .item-display;
@@ -60,7 +60,7 @@
 .header__categori--button {
   button {
     width: 118px;
-    @extend .button;
+    @include button(none, #fff);
     @extend .item-display;
     @extend .categori-border;
   }
@@ -89,11 +89,10 @@
 .header__categori--keywords {
   @extend .bold-font;
   font-size: 16px;
-  padding: 0px 8px 0px 12px;
-  margin-right: 90px;
+  padding: 0px 14px;
 
   li {
-    padding: 0px 12px;
+    padding: 0px 14px;
   }
 }
 
@@ -103,10 +102,7 @@
   justify-content: space-between;
   li {
     @extend .item-display;
-  }
-
-  li:nth-child(1) {
-    margin-right: 20px;
+    padding-left: 34px;
   }
 
   img {
