--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -63,56 +63,11 @@
             <img src="/images/main-2.png" alt="main image2" height="340" >
           </div>
         </div>
-        <div class="cell">
-          <li>
-            <a href="#">
-              <img class="cell__lowehalf_pic" src="/images/test.png">
-              <span class="cell__product_name">촉촉하고 향기롭게 바디 미스트</span>
-              <span class="cell__explanation">간편하게 뿌리기 좋아요</span>
-              <span class="cell__icon"></span>
-            </a>
-          </li>
-        </div>
-        <div class="cell">
-          <li>
-            <a href="#">
-               <img src="">
-              <span>깔끔한 감성 가구 #두닷</span>
-              <span>세련되고 단정한 디자인이 가득</span>
-              <span>테마</span>
-            </a>
-          </li>
-        </div>
-        <div class="cell">
-          <li>
-            <a href="#">
-              <img>
-              <span>우리 집 데드 스페이스 없애기</span>
-              <span>자투리 공간에 맞춰 수납하기</span>
-              <span>테마</span>
-            </a>
-          </li>
-        </div>
-        <div class="cell">
-          <li>
-            <a href="#">
-              <img>
-              <span>마켓비 빈티지 모음전</span>
-              <span>하나만 고르기 힘든 다양한 디자인</span>
-              <span>테마</span>
-            </a>
-          </li>
-        </div>
-        <div class="cell">
-          <li>
-            <a href="#">
-              <img>
-              <span>헤어 관리를 위한 트리트먼트</span>
-              <span>찰랑거리는 머릿결을 위하여</span>
-              <span>테마</span>
-            </a>
-          </li>
-        </div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
         <div class="cell">
           <button class="btn_more_info">더보기(1 / n건)</button>
         </div>
