Feat. hot-deal slide

--- a/public/src/css/partials/main.scss
+++ b/public/src/css/partials/main.scss
@@ -233,6 +233,9 @@ main {
         opacity: 0.3;
         cursor: pointer;
       }
+      & > div:hover {
+        opacity: 0.5;
+      }
     }
   }
 }
