--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -48,43 +48,160 @@ table {
   display: inline-block;
   width: 843px;
 }
-
-.tit_shw {
+.area_headtop .tit_shw {
   display: inline-block;
-  float: left;
   margin-top: 4px;
 }
-
-.tit_shw > a {
+.area_headtop .tit_shw a {
   display: block;
 }
-
-.wrap_shwsearch {
-  display: inline-block;
+.area_headtop .tit_shw #logo_shw {
+  width: 119px;
+  height: auto;
+}
+.area_headtop .wrap_shwsearch {
+  display: float;
   float: right;
   margin: 0 24px 0 30px;
   z-index: 1060;
 }
-
-#logo_shw {
-  width: 119px;
-  height: auto;
-}
-
-#ico_search {
-  left: 14px;
-  top: 15px;
-  width: 23px;
-  height: 23px;
-}
-
-.box_search {
+.area_headtop .box_search {
   width: 670px;
   height: 54px;
   border: 1px solid #cecfd1;
   border-radius: 10px;
   background-color: #fff;
   box-sizing: border-box;
+}
+.area_headtop .box_search .input_box {
+  border: 0;
+  margin: 0 20px;
+  padding: 0;
+  height: 100%;
+  width: 570px;
+  float: left;
+  outline: none;
+  cursor: auto;
+}
+.area_headtop .box_search .btn_shwsearch {
+  margin: 0px;
+  padding: 0px;
+  width: 52px;
+  height: 52px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.area_headtop .box_search #ico_search {
+  margin: 3px 0 0 3px;
+}
+
+.area_shwgnb {
+  width: 100%;
+  height: 54px;
+  display: flex;
+  margin-top: 40px;
+  border-top: 1px solid #efefef;
+  box-shadow: 0 1px rgba(0, 0, 0, 0.16);
+  justify-content: space-between;
+}
+.area_shwgnb .wrap_shwgnb-left {
+  display: flex;
+  align-items: center;
+  margin-left: 295px;
+}
+.area_shwgnb .wrap_shwgnb-left .wrap-shwcate .categoryBtn {
+  position: relative;
+  width: 122px;
+  padding: 0;
+  align-items: center;
+  display: flex;
+  flex-direction: row-reverse;
+  background-color: transparent;
+  border: none;
+  font-size: 1rem;
+  line-height: 54px;
+  margin-left: -24px;
+  margin-top: -6px;
+  cursor: pointer;
+}
+.area_shwgnb .wrap_shwgnb-left .wrap-shwcate .categoryBtn:focus {
+  outline: none;
+}
+.area_shwgnb .wrap_shwgnb-left .wrap-shwcate .categoryTxt {
+  margin-right: -3px;
+  margin-top: 6px;
+}
+.area_shwgnb .wrap_shwgnb-left .wrap-shwcate .ico_view {
+  top: 17px;
+  left: 28px;
+  position: absolute;
+  height: 28px;
+  overflow: hidden;
+}
+.area_shwgnb .wrap_shwgnb-left .wrap-shwcate .ico_menu {
+  vertical-align: middle;
+}
+.area_shwgnb .wrap_shwgnb-left .wrap-shwcate .ico_menu:hover {
+  margin-top: -56px;
+}
+.area_shwgnb .wrap_shwgnb-left .txt_bar {
+  margin: 0 22px;
+  color: #e3e3e3;
+}
+.area_shwgnb .wrap_shwgnb-left .list_shwgnb {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+}
+.area_shwgnb .wrap_shwgnb-left .list_shwgnb li {
+  margin: 0 8px;
+  font-weight: bold;
+  letter-spacing: -0.08em;
+}
+.area_shwgnb .wrap_shwgnb-left .list_kwrodgnb {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+}
+.area_shwgnb .wrap_shwgnb-left .list_kwrodgnb li {
+  margin: 0 8px;
+  font-weight: bold;
+  color: #888888;
+  letter-spacing: -0.08em;
+}
+.area_shwgnb .wrap_shwgnb-right {
+  margin-right: 295px;
+  height: 54px;
+  display: flex;
+  align-items: center;
+}
+.area_shwgnb .wrap_shwgnb-right .list_usergnb {
+  display: flex;
+}
+.area_shwgnb .wrap_shwgnb-right .list_usergnb .loginWrap {
+  margin-right: 15px;
+}
+.area_shwgnb .wrap_shwgnb-right .list_usergnb .ico_user {
+  vertical-align: middle;
+}
+.area_shwgnb .wrap_shwgnb-right .list_usergnb .ico_products {
+  vertical-align: middle;
+}
+.area_shwgnb .wrap_shwgnb-right .list_usergnb .loginBtn {
+  text-decoration: none;
+}
+.area_shwgnb .wrap_shwgnb-right .list_usergnb .productBtn {
+  text-decoration: none;
+}
+
+.categoryLayer {
+  visibility: hidden;
+}
+
+.categoryLayer:hover {
+  visibility: visible;
 }
 
 .head_shw {
@@ -95,93 +212,130 @@ table {
   min-width: 977px;
 }
 
-.btn_shwsearch {
-  float: right;
-  right: 0;
-  top: 0;
-  width: 52px;
-  height: 52px;
-  background-color: transparent;
+.mainBanner {
+  background-color: #f3f3f3;
+}
+.mainBanner .cont_event {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  justify-content: center;
+  padding-top: 19px;
+  padding-bottom: 50px;
+  border: 1px solid #e4e4e4;
+}
+.mainBanner .cont_event .cont_event-left {
+  display: flex;
+  justify-content: center;
+  width: 510px;
+  height: 340px;
+  background-color: white;
+  border: 1px solid #e4e4e4;
+}
+.mainBanner .cont_event .cont_event-right {
+  display: flex;
+  justify-content: center;
+  width: 754px;
+  height: 340px;
+  background-color: white;
+  border: 1px solid #e4e4e4;
+}
+.mainBanner .cont_event .page_box-list {
+  position: absolute;
+  display: flex;
+  background-color: white;
+  top: 305px;
+  left: 1162px;
+}
+.mainBanner .cont_event .page_box-list .page_box {
+  margin: 0 2px;
+  background-color: #cccccc;
+  width: 15px;
+  height: 5px;
+}
+.mainBanner .cont_event .page_box-list .page_box-select {
+  background-color: black;
+  margin: 0 2px;
+  width: 15px;
+  height: 5px;
+}
+
+.ico_slide-left {
+  display: inline-block;
+  overflow: hidden;
+  color: red;
+  width: 15px;
+  height: 25px;
+  font-size: 0;
+  line-height: 0;
+  background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png) no-repeat;
+  text-indent: -9999px;
+}
+
+.icon {
+  position: relative;
+  width: 80px;
+  height: 60px;
+  top: 130px;
+  background: transparent;
   border: none;
-  margin: 0;
-  padding: 0;
-  outline: none;
   cursor: pointer;
 }
+.icon .arrowLeft {
+  border: none;
+  width: 66%;
+  position: absolute;
+  left: -20px;
+}
+.icon .arrowLeft::after, .icon .arrowLeft::before {
+  content: "";
+  position: absolute;
+  width: 60%;
+  height: 2px;
+  right: -20px;
+  background-color: #ECECEC;
+}
+.icon .arrowLeft::after {
+  top: -11px;
+  transform: rotate(-45deg);
+}
+.icon .arrowLeft::before {
+  top: 11px;
+  transform: rotate(45deg);
+}
+.icon .arrowRight {
+  border: none;
+  width: 66%;
+  position: absolute;
+  left: -20px;
+}
+.icon .arrowRight::after, .icon .arrowRight::before {
+  content: "";
+  position: absolute;
+  width: 60%;
+  height: 2px;
+  right: -20px;
+  background-color: #ECECEC;
+}
+.icon .arrowRight::after {
+  top: -11px;
+  transform: rotate(45deg);
+}
+.icon .arrowRight::before {
+  top: 11px;
+  transform: rotate(-45deg);
+}
 
-.input_box {
-  border: 0;
-  margin: 0 20px;
-  padding: 0;
-  height: 100%;
-  width: 570px;
-  float: left;
+.icon:focus {
   outline: none;
-  cursor: auto;
 }
 
-.area_shwgnb {
-  width: 100%;
-  height: 54px;
-  display: block;
-  position: relative;
-  margin-top: 40px;
-  border-top: 1px solid #efefef;
-  box-shadow: 0 1px rgba(0, 0, 0, 0.16);
-}
-
-.wrap_shwgnb {
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.wrap-shwcate {
-  float: left;
-  position: relative;
-  z-index: 1050;
-  align-items: center;
-}
-
-.list_shwgnb {
-  display: flex;
-  flex-direction: row;
-  list-style: none;
-}
-
-.list_kwrodgnb {
-  display: flex;
-  flex-direction: row;
-  list-style: none;
-}
-
-.list_usergnb {
-  display: flex;
-  flex-direction: row;
-  margin-left: auto;
-}
-
-.ico_user {
-  display: flex;
-  flex-direction: row;
-}
-
-.loginBtn {
-  display: flex;
-  flex-direction: row;
-  width: 103px;
-  align-items: center;
-}
-
-.productBtn {
-  display: flex;
-  flex-direction: row;
-  width: 154px;
-  align-items: center;
-}
-
-.categoryBtn {
-  align-items: center;
+.container {
+  position: absolute;
+  margin-left: 295px;
+  visibility: hidden;
+  z-index: 100;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=index.css.map */
