--- a/shoppingHow/views/index.ejs
+++ b/shoppingHow/views/index.ejs
@@ -85,9 +85,10 @@
             </div>
           </section>
           <section class="section_products">
-            <ul>
+            <ul class="section_products_list">
               <!--제품들 10개 들어갈 예정-->
             </ul>
+            <button class="section_products_seeMore">더보기 ▼</button>
           </section>
           <section class="section_categories">
             <span>지금 뜨는 테마 카테고리</span>
@@ -97,5 +98,6 @@
       </div>
     </main>
     <script type="text/javascript" src="/javascripts/slide.js"></script>
+    <script type="text/javascript" src="/javascripts/moreProducts.js"></script>
   </body>
 </html>
